# reverse-rewrite

./: .gitignore  LICENSE  README.md  gcc-static-reflection.cpp  index.html  index.zh.html
01-hexyl/: NOTES.md
01-hexyl/translated-cpp/: CMakeLists.txt
01-hexyl/translated-cpp/src/: byte_offset.cpp  byte_offset.hpp  colors.cpp  colors.hpp  hexyl.cpp  hexyl.hpp  input.cpp  input.hpp  main.cpp
01-hexyl/translated-cpp/tests/: test_byte_offset.cpp  test_printer.cpp
02-coreutils/: NOTES.md
02-coreutils/cat/translated-cpp/: CMakeLists.txt
02-coreutils/cat/translated-cpp/src/: cat.cpp
02-coreutils/echo/translated-cpp/: CMakeLists.txt
02-coreutils/echo/translated-cpp/src/: echo.cpp
02-coreutils/tr/translated-cpp/: CMakeLists.txt
02-coreutils/tr/translated-cpp/src/: tr.cpp
03-mini-redis/: NOTES.md
03-mini-redis/translated-cpp/: CMakeLists.txt  test.sh
03-mini-redis/translated-cpp/src/: cli_main.cpp  client.cpp  client.hpp  command.cpp  command.hpp  connection.cpp  connection.hpp  db.cpp  db.hpp  frame.cpp  frame.hpp  parse.cpp  parse.hpp  server.cpp  server.hpp  server_main.cpp  shutdown.hpp
04-fish-shell/: NOTES.md
04-fish-shell/translated-cpp/src/: color.cpp  color.hpp  timer.cpp  timer.hpp  wgetopt.cpp  wgetopt.hpp
articles/: 01-methodology.html  01-methodology.md  01-methodology.zh.html  01-methodology.zh.md  02-coreutils.html  02-coreutils.md  02-coreutils.zh.html  02-coreutils.zh.md  03-concurrency.html  03-concurrency.md  03-concurrency.zh.html  03-concurrency.zh.md  04-fish-shell.html  04-fish-shell.md  04-fish-shell.zh.html  04-fish-shell.zh.md  05-theory.html  05-theory.md  05-theory.zh.html  05-theory.zh.md  06-afterword.html  06-afterword.md  06-afterword.zh.html  06-afterword.zh.md
assets/: article.js  site-zh.css  site.css
